--- a/listaFrutiferas.html
+++ b/listaFrutiferas.html
@@ -116,6 +116,8 @@
 
   <script src="./node_modules/toastify-js/src/toastify.js"></script>
 
+  <script src="./node_modules/moment/min/moment-with-locales.min.js"></script>
+
   <script src="./src/listaFrutiferas.js" type="module"></script>
 </body>
 </html>
